--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,13 @@
-P {
+p {
   font-family: sans-serif;
   color: white;
   padding-left: 90px;
   padding-top: 100px;
+  font-size: 20px;
 }
 
 body {
-	background-color: black;
+	background-color: #10d897;
 }
 
 .main { /* this is the horizontal block of white */
